fix(ui): fix alignment issue with remember-me feature

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -226,17 +226,17 @@
 }
 
 .status-container {
-  display:flex;
-  flex-direction:row-reverse;
-  justify-content:space-between;
-  align-items:center;
-  position:relative;
+  display:flex; 
+  flex-direction:row-reverse; 
+  justify-content:space-between; 
+  align-items:center; 
+  position:relative; 
 }
 
 .remember-status {
-  position:absolute;
-  left:0px;
-  bottom: -10px;
+  position:absolute; 
+  bottom: -10px; 
+  left:0; 
 }
 
 .form-control {
